deploy: 3c08662389d2f38cffa958bab3d4d73c720b1f3a

--- a/master/index.html
+++ b/master/index.html
@@ -199,9 +199,9 @@
   </svg>
 </a>zstd</h1>
 
-<p><a href="https://travis-ci.org/didactic-drunk/zstd.cr"><img src="https://travis-ci.org/didactic-drunk/zstd.cr.svg?branch=master" alt="Build Status"/></a>
+<p><a href="https://github.com/didactic-drunk/zstd.cr/actions/workflows/crystal.yml"><img src="https://github.com/didactic-drunk/zstd.cr/actions/workflows/crystal.yml/badge.svg" alt="Crystal CI"/></a>
 <a href="https://github.com/didactic-drunk/zstd.cr/releases"><img src="https://img.shields.io/github/release/didactic-drunk/zstd.cr.svg" alt="GitHub release"/></a>
-<a href="https://didactic-drunk.github.io/zstd.cr/"><img src="https://img.shields.io/badge/docs-available-brightgreen.svg" alt="Docs"/></a></p>
+<a href="https://didactic-drunk.github.io/zstd.cr/master"><img src="https://img.shields.io/badge/docs-available-brightgreen.svg" alt="Docs"/></a></p>
 
 <p>Crystal bindings to the Zstandard (zstd) compression library</p>
 
