deploy: 3ca0687fdd40602c219e104e994ec7e182d3b278

--- a/master/index.html
+++ b/master/index.html
@@ -201,6 +201,7 @@
 
 <p><a href="https://github.com/didactic-drunk/zstd.cr/actions/workflows/crystal.yml"><img src="https://github.com/didactic-drunk/zstd.cr/actions/workflows/crystal.yml/badge.svg" alt="Crystal CI"/></a>
 <a href="https://github.com/didactic-drunk/zstd.cr/releases"><img src="https://img.shields.io/github/release/didactic-drunk/zstd.cr.svg" alt="GitHub release"/></a>
+<img src="https://img.shields.io/github/commits-since/didactic-drunk/zstd.cr/latest" alt="GitHub commits since latest release (by date) for a branch"/>
 <a href="https://didactic-drunk.github.io/zstd.cr/master"><img src="https://img.shields.io/badge/docs-available-brightgreen.svg" alt="Docs"/></a></p>
 
 <p>Crystal bindings to the Zstandard (zstd) compression library</p>
